crates/dsl-core/tests/snapshots/dag_golden__dag_full_onboarding_flow.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Generali Asset Mgmt",
                            ),
                            Span {
                                start: 27,
                                end: 48,
                            },
                        ),
                        span: Span {
                            start: 21,
                            end: 48,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "DE",
                            ),
                            Span {
                                start: 63,
                                end: 67,
                            },
                        ),
                        span: Span {
                            start: 49,
                            end: 67,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "cbu",
                ),
                span: Span {
                    start: 9,
                    end: 77,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create-limited-company",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Generali AM GmbH",
                            ),
                            Span {
                                start: 123,
                                end: 141,
                            },
                        ),
                        span: Span {
                            start: 117,
                            end: 141,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "entity",
                ),
                span: Span {
                    start: 86,
                    end: 154,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "cbu",
                verb: "assign-role",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 188,
                                end: 192,
                            },
                        },
                        span: Span {
                            start: 180,
                            end: 192,
                        },
                    },
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 204,
                                end: 211,
                            },
                        },
                        span: Span {
                            start: 193,
                            end: 211,
                        },
                    },
                    Argument {
                        key: "role",
                        value: Literal(
                            String(
                                "ASSET_MANAGER",
                            ),
                            Span {
                                start: 218,
                                end: 233,
                            },
                        ),
                        span: Span {
                            start: 212,
                            end: 233,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 163,
                    end: 234,
                },
            },
            source_stmt: 2,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "kyc-case",
                verb: "create",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 268,
                                end: 272,
                            },
                        },
                        span: Span {
                            start: 260,
                            end: 272,
                        },
                    },
                    Argument {
                        key: "case-type",
                        value: Literal(
                            String(
                                "standard",
                            ),
                            Span {
                                start: 284,
                                end: 294,
                            },
                        ),
                        span: Span {
                            start: 273,
                            end: 294,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "case",
                ),
                span: Span {
                    start: 243,
                    end: 305,
                },
            },
            source_stmt: 3,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "pep",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 340,
                                end: 347,
                            },
                        },
                        span: Span {
                            start: 329,
                            end: 347,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 314,
                    end: 348,
                },
            },
            source_stmt: 4,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "sanctions",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 389,
                                end: 396,
                            },
                        },
                        span: Span {
                            start: 378,
                            end: 396,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 357,
                    end: 397,
                },
            },
            source_stmt: 5,
        },
    ],
    errors: [],
}
