crates/dsl-core/tests/snapshots/dag_golden__dag_independent_entity_creates.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create-proper-person",
                arguments: [
                    Argument {
                        key: "first-name",
                        value: Literal(
                            String(
                                "John",
                            ),
                            Span {
                                start: 50,
                                end: 56,
                            },
                        ),
                        span: Span {
                            start: 38,
                            end: 56,
                        },
                    },
                    Argument {
                        key: "last-name",
                        value: Literal(
                            String(
                                "Smith",
                            ),
                            Span {
                                start: 68,
                                end: 75,
                            },
                        ),
                        span: Span {
                            start: 57,
                            end: 75,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "person1",
                ),
                span: Span {
                    start: 9,
                    end: 89,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create-proper-person",
                arguments: [
                    Argument {
                        key: "first-name",
                        value: Literal(
                            String(
                                "Jane",
                            ),
                            Span {
                                start: 139,
                                end: 145,
                            },
                        ),
                        span: Span {
                            start: 127,
                            end: 145,
                        },
                    },
                    Argument {
                        key: "last-name",
                        value: Literal(
                            String(
                                "Doe",
                            ),
                            Span {
                                start: 157,
                                end: 162,
                            },
                        ),
                        span: Span {
                            start: 146,
                            end: 162,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "person2",
                ),
                span: Span {
                    start: 98,
                    end: 176,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "entity",
                verb: "create-limited-company",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Apex Capital Ltd",
                            ),
                            Span {
                                start: 222,
                                end: 240,
                            },
                        ),
                        span: Span {
                            start: 216,
                            end: 240,
                        },
                    },
                ],
                lens_override: None,
                binding: Some(
                    "company",
                ),
                span: Span {
                    start: 185,
                    end: 254,
                },
            },
            source_stmt: 2,
        },
    ],
    errors: [],
}
