crates/dsl-core/tests/snapshots/dag_golden__dag_registry_introspection_flow.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "registry",
                verb: "list",
                arguments: [
                    Argument {
                        key: "kind",
                        value: Literal(
                            String(
                                "attribute",
                            ),
                            Span {
                                start: 30,
                                end: 41,
                            },
                        ),
                        span: Span {
                            start: 24,
                            end: 41,
                        },
                    },
                    Argument {
                        key: "limit",
                        value: Literal(
                            Integer(
                                50,
                            ),
                            Span {
                                start: 49,
                                end: 51,
                            },
                        ),
                        span: Span {
                            start: 42,
                            end: 51,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 9,
                    end: 52,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "registry",
                verb: "discover-dsl",
                arguments: [
                    Argument {
                        key: "domain",
                        value: Literal(
                            String(
                                "cbu",
                            ),
                            Span {
                                start: 92,
                                end: 97,
                            },
                        ),
                        span: Span {
                            start: 84,
                            end: 97,
                        },
                    },
                    Argument {
                        key: "verb",
                        value: Literal(
                            String(
                                "create",
                            ),
                            Span {
                                start: 104,
                                end: 112,
                            },
                        ),
                        span: Span {
                            start: 98,
                            end: 112,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 61,
                    end: 113,
                },
            },
            source_stmt: 1,
        },
    ],
    errors: [],
}
